--- a/sunspec/models/smdx/README
+++ b/sunspec/models/smdx/README
@@ -1,3 +1,4 @@
 
-Synced with sunspec/models repository version:
+Synced with sunspec/models repository version: 040cf650c4e7a9aa406574cf9b9f7ed69ca1edb0
+
 
