Updated with version 1.0.6 changes.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -35,7 +35,7 @@ Version 1.0.5   7 Apr 2015
 Version 1.0.6   4 Jun 2015
 ---------------------------
 - Corrected support for constant scale factor.
-- Updated to observe point address boundy on model read.
+- Updated to observe point address boundry on model read.
 
 --- Include latest SMDX model definitions which have been updated with the following changes:
 - Model 63001 - Added constant scale factor point and label info.
