--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -58,3 +58,7 @@ Version 1.0.8 20 Jul 2016
 - Corrected units for model 121 WGra to be per second rather per minute to be consistent with previous correction to IEC 61850-7-420.
 - Updated models 801-809
 
+Version 2.0.0 11 Feb 2018
+-------------------------
+- Updated to support Python 3. Updated version officially supports 2.7, 3.3-3.6.
+- Include latest SMDX model definitions.
